--- a/deno.json
+++ b/deno.json
@@ -1,14 +1,6 @@
 {
-  "name": "@kt3k/domx",
-  "version": "0.1.8",
-  "exports": {
-    ".": "./empty.ts",
-    "./jsx-runtime": "./jsx_runtime.ts"
-  },
-  "compilerOptions": {
-    "lib": ["dom", "esnext"]
-  },
-  "fmt": {
-    "semiColons": false
-  }
+  "workspace": [
+    "./jsx-runtime",
+    "./examples"
+  ]
 }
